--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ packages = [{include = "carrot_market_backend"}]
 [tool.poetry.dependencies]
 python = "^3.9"
 django = "^4.1.3"
+djangorestframework = "^3.14.0"
 
 
 [build-system]
